# possverif

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/possverif/: __init__.py  aggregation.py  distribution.py  information.py
tests/: test_scorecard.py
